--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="main animated bounceInRight">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-sm-12">
+            <div class="col-lg-6 col-sm-12" style="padding-bottom: 1.5em;">
                 <h1>Want to step up your Java?</h1>
                 <p>A lot of video programming tutorials : ZzzZZzZzZZZ.</p>
                 <p>Not here. Get opinionated and concise screencasts, made for the modern Java developer. Always with
