--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Your Name - Prosopo Personal Website</title>
+    <title>The Best Java and JVM Screencasts | Marcobehler.com</title>
 
     <!-- Bootstrap 3 core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,6 +42,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="#about" data-toggle="modal" data-target="#modalAbout">/imprint</a></li>
                 <li><a href="#services" data-toggle="modal" data-target="#modalServices">/consulting</a></li>
+                <li><a href="#books" data-toggle="modal" data-target="#modalContact">/books</a></li>
                 <li><a href="#contact" data-toggle="modal" data-target="#modalContact">/blog</a></li>
             </ul>
         </div>
