--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         <div class="row">
             <div class="col-lg-6 col-sm-12">
                 <p class="social-buttons">
-                    <a href=""><i class="fa fa-github"></i></a>
-                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href="https://github.com/marcobehler"><i class="fa fa-github"></i></a>
+                    <a href="https://twitter.com/marcobehler"><i class="fa fa-twitter"></i></a>
                 </p>
 
             </div>
