--- a/stickynav.html
+++ b/stickynav.html
@@ -20,9 +20,8 @@
     <!-- Custom styles for this template -->
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/ie-emulation-modes-warning.js"></script>
+    <!-- FontAwesome CSS -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -74,9 +73,8 @@
 
 
         </div>
-        <div class="col-lg-6 col-sm-12" style="border: 1px solid #ccc;border-radius: 4px; padding: 2em;">
-
-          <div class="form-group">
+        <div class="col-lg-6 col-sm-12">
+          <div class="form-group" style="border: 1px solid #ccc;border-radius: 4px; padding: 2em;">
 
             <p>Like to get early access? Get our 7-part, no-BS video series to getting started with Spring Boot,
               from 0 to REST.</p>
