--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="Marco Behler GmbH">
-    <link rel="icon" href="../../favicon.ico">
+
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+
 
     <title>The Best Java and JVM Screencasts | Marcobehler.com</title>
 
@@ -61,7 +68,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-sm-12" style="padding-bottom: 1.5em;">
-          <h1>Want to step up your Java?</h1>
+          <h1 style="padding-bottom: 0.5em">Want to step up your Java?</h1>
           <p>A lot of video programming tutorials : ZzzZZzZzZZZ.</p>
           <p>Not here. Get opinionated and concise screencasts, made for the modern Java developer. Always with
             real-life code and workflow.</p>
@@ -75,8 +82,7 @@
         </div>
         <div class="col-lg-6 col-sm-12">
           <div class="form-group" style="border: 1px solid #ccc;border-radius: 4px; padding: 2em;">
-
-            <p>Like to get early access? Get our 7-part, no-BS video series to getting started with Spring Boot,
+            <p style="padding-bottom: 1em;">Like to get early access? Get our 7-part, no-BS video series to getting started with Spring Boot,
               from 0 to REST.</p>
             <form action="https://sendy.marcobehler.com/subscribe" method="POST" accept-charset="utf-8">
               <label for="name">First Name * </label><br/>
@@ -86,7 +92,7 @@
               <input type="email" name="email" id="email" class="form-control"/>
               <br/>
               <input type="hidden" name="list" value="7yaui1JL7633CriPxto2zZKA"/>
-              <button type="submit" class="btn btn-primary" name="submit" id="submit">Yep, send me those
+              <button type="submit" class="btn btn-primary" name="submit" id="submit" style="font-size: 20px">Yep, send me those
                 videos!
               </button>
             </form>
