--- a/index.html
+++ b/index.html
@@ -79,9 +79,6 @@
 
           <!-- Social Icons - FontAwesome -->
 
-
-        </div>
-        <div class="col-lg-6 col-sm-12">
           <div class="form-group" style="border: 1px solid #ccc;border-radius: 4px; padding: 2em;">
             <p style="padding-bottom: 1em;">Like to get early access? Get our 7-part, no-BS video series to getting started with Spring Boot,
               from 0 to REST.</p>
@@ -97,8 +94,10 @@
                 videos!
               </button>
             </form>
-
           </div>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <img src="img/video-teaser.PNG" class="img-responsive"/>
         </div>
       </div>
       <div class="row">
