--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,100 +33,114 @@
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="//oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="//oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">marcobehler.com</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">marcobehler.com</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#about" data-toggle="modal" data-target="#modalAbout">/imprint</a></li>
-            <li><a href="#services" data-toggle="modal" data-target="#modalServices">/consulting</a></li>
-            <li><a href="#books" data-toggle="modal" data-target="#modalContact">/books</a></li>
-            <li><a href="#contact" data-toggle="modal" data-target="#modalContact">/blog</a></li>
-            </li>
-          </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="#about" data-toggle="modal" data-target="#modalAbout">/imprint</a></li>
+                <li><a href="#services" data-toggle="modal" data-target="#modalServices">/consulting</a></li>
+                <li><a href="#books" data-toggle="modal" data-target="#modalContact">/books</a></li>
+                <li><a href="#contact" data-toggle="modal" data-target="#modalContact">/blog</a></li>
+                </li>
+            </ul>
         </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <div class="main">
+<div class="main">
     <!-- Begin page content -->
     <div class="container">
-      <div class="row">
-        <div class="col-lg-6 col-sm-12" style="padding-bottom: 1.5em;">
-          <h1 style="padding-bottom: 0.5em">Want to step up your Java?</h1>
-          <p>A lot of video programming tutorials : ZzzZZzZzZZZ.</p>
-          <p>Not here. Get opinionated and concise screencasts, made for the modern Java developer. Always with
-            real-life code and workflow.</p>
-          <p>
-          <p>
-          <p>(Open to the public: End of January 2017)</p>
+        <div class="row">
+            <div class="col-lg-6 col-sm-12" style="padding-bottom: 1.5em;">
+                <h1 style="padding-bottom: 0.5em">Want to step up your Java?</h1>
+                <p>A lot of video programming tutorials : ZzzZZzZzZZZ.</p>
+                <p>Not here. Get opinionated and concise screencasts, made for the modern Java developer. Always with
+                    real-life code and workflow.</p>
+                <p>
+                <p>
+                <p>(Open to the public: End of January 2017)</p>
 
-          <!-- Social Icons - FontAwesome -->
+                <!-- Social Icons - FontAwesome -->
+            </div>
+            <div class="col-lg-6 col-sm-12">
 
-          <div class="form-group" style="border: 1px solid #ccc;border-radius: 4px; padding: 2em;">
-            <p style="padding-bottom: 1em;">Like to get early access? Get our 7-part, no-BS video series to getting started with Spring Boot,
-              from 0 to REST.</p>
-            <form action="https://sendy.marcobehler.com/subscribe" method="POST" accept-charset="utf-8">
-              <label for="name">First Name * </label><br/>
-              <input type="text" name="name" id="name" class="form-control"/>
-              <br/>
-              <label for="email">Email *</label><br/>
-              <input type="email" name="email" id="email" class="form-control"/>
-              <br/>
-              <input type="hidden" name="list" value="7yaui1JL7633CriPxto2zZKA"/>
-              <button type="submit" class="btn btn-primary" name="submit" id="submit" style="font-size: 20px">Yep, send me those
-                videos!
-              </button>
-            </form>
-          </div>
+            </div>
         </div>
-        <div class="col-lg-6 col-sm-12">
-          <img src="img/video-teaser.PNG" class="img-responsive"/>
+
+        <div class="row">
+            <div class="col-lg-6 col-sm-12" style="margin-top: 2.5em">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe src="https://player.vimeo.com/video/194344183" class="embed-responsive-item" frameborder="0"
+                            webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="col-lg-6 col-sm-12" style="margin-top: 2.5em">
+                <div class="form-group" style="border: 1px solid #ccc;border-radius: 4px; padding: 2em;">
+                    <p style="padding-bottom: 1em;">Like to get early access? Get our 7-part, no-BS video series to
+                        getting started with Spring Boot,
+                        from 0 to REST.</p>
+                    <form action="https://sendy.marcobehler.com/subscribe" method="POST" accept-charset="utf-8">
+                        <label for="name">First Name * </label><br/>
+                        <input type="text" name="name" id="name" class="form-control"/>
+                        <br/>
+                        <label for="email">Email *</label><br/>
+                        <input type="email" name="email" id="email" class="form-control"/>
+                        <br/>
+                        <input type="hidden" name="list" value="7yaui1JL7633CriPxto2zZKA"/>
+                        <button type="submit" class="btn btn-primary" name="submit" id="submit" style="font-size: 20px">
+                            Yep, send me those
+                            videos!
+                        </button>
+                    </form>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6 col-sm-12">
-          <p class="social-buttons">
-            <a href="https://github.com/marcobehler"><i class="fa fa-github"></i></a>
-            <a href="https://twitter.com/marcobehler"><i class="fa fa-twitter"></i></a>
-          </p>
+
+        <div class="row">
+            <div class="col-lg-6 col-sm-12">
+                <p class="social-buttons">
+                    <a href="https://github.com/marcobehler"><i class="fa fa-github"></i></a>
+                    <a href="https://twitter.com/marcobehler"><i class="fa fa-twitter"></i></a>
+                </p>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+            </div>
         </div>
-        <div class="col-lg-6 col-sm-12">
-        </div>
-      </div>
     </div>
-    </div>
+</div>
 
-    <footer class="footer">
-      <div class="container">
+<footer class="footer">
+    <div class="container">
         <p class="text-muted">@ 2016 | Marcobehler.com</p>
-      </div>
-    </footer>
+    </div>
+</footer>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+<script src="js/bootstrap.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="js/ie10-viewport-bug-workaround.js"></script>
+</body>
 </html>
