--- a/index.html
+++ b/index.html
@@ -69,31 +69,29 @@
     <!-- Begin page content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-sm-12" style="padding-bottom: 1.5em;">
+            <div class="col-lg-6 col-sm-12" style="line-height: 1.7em;">
                 <h1 style="padding-bottom: 0.5em">Want to step up your Java?</h1>
-                <p>A lot of video programming tutorials : ZzzZZzZzZZZ.</p>
-                <p>Not here. Get opinionated and concise screencasts, made for the modern Java developer. Always with
-                    real-life code and workflow.</p>
-                <p>
-                <p>
-                <p>(Open to the public: End of January 2017)</p>
+                <p>You are a (busy) Java developer and ready for more. Here's the conflict: On one hand you want to get knowledge that improves your day-to-day work.</p><p>On the other hand you certainly do not want spend hours of skimming through documentation and books.</p>
+                <p></p>
 
-                <!-- Social Icons - FontAwesome -->
+                <p>Screencasts to the rescue! The only problem: A lot of them make you go ZzzZZzZzZZZZzz. </p>
+                <p>Not ours.</p>
+
+                <p>Get opinionated and concise screencasts, made for you. Always with real-life code and workflow. Published on an almost-daily basis.</p>
+
+                <p>(Open to the public: End of January 2017)</p>
             </div>
             <div class="col-lg-6 col-sm-12">
-
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-6 col-sm-12" style="margin-top: 2.5em">
-                <div class="embed-responsive embed-responsive-16by9">
+                <div class="embed-responsive embed-responsive-16by9 video-teaser">
                     <iframe src="https://player.vimeo.com/video/194344183" class="embed-responsive-item" frameborder="0"
                             webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
             </div>
-            <div class="col-lg-6 col-sm-12" style="margin-top: 2.5em">
-                <div class="form-group" style="border: 1px solid #ccc;border-radius: 4px; padding: 2em;">
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3" style="margin-top: 2.5em">
+                <div class="form-group newsletter-form">
                     <p style="padding-bottom: 1em;">Like to get early access? Get our 7-part, no-BS video series to
                         getting started with Spring Boot,
                         from 0 to REST.</p>
@@ -115,7 +113,7 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-6 col-sm-12">
+            <div class="col-md-6 col-md-offset-3">
                 <p class="social-buttons">
                     <a href="https://github.com/marcobehler"><i class="fa fa-github"></i></a>
                     <a href="https://twitter.com/marcobehler"><i class="fa fa-twitter"></i></a>
