--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-6 col-sm-12" style="line-height: 1.7em;">
                 <h1 style="padding-bottom: 0.5em">Want to step up your Java?</h1>
-                <p>You are a (busy) Java developer and ready for more. Here's the conflict: On one hand you want to get knowledge that improves your day-to-day work.</p><p>On the other hand you certainly do not want spend hours of skimming through documentation and books.</p>
+                <p>You are a (busy) Java developer and ready for more. Here's the conflict: On one hand you want to get knowledge that improves your day-to-day work.</p><p>On the other hand you certainly do not want that dreadful feeling of spending hours skimming through documentation and books.</p>
                 <p></p>
 
                 <p>Screencasts to the rescue! The only problem: A lot of them make you go ZzzZZzZzZZZZzz. </p>
