--- a/subscription-success.html
+++ b/subscription-success.html
@@ -70,7 +70,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12" style="line-height: 1.7em;">
-                <p>Yay! Welcome to the club!</p>
+                <h1>Yay! Welcome to the club!</h1>
+
+                <p>Go and check your inbox, we will send you instructions on how to watch our free Spring Boot videos.</p>
 
                 <p><strong>Just one more thing…</strong></p>
 
@@ -80,11 +82,8 @@
 
                 <p>The simplest way to help make sure our emails don&#8217;t get accidentally sent to your spam filter is to add our email address above to the address book in whatever mail client you use.</p>
 
-                <p>Also, if you use Gmail with the Promotions tab this email might have ended up in your Promotions tab. If it did&#8230;go ahead and drag it over to the primary tab, just like this.</p>
+                <p>(Also, if you use Gmail with the Promotions tab this email might have ended up in your Promotions tab. If it did&#8230;go ahead and drag it over to the primary tab.)</p>
 
-                <img src="https://unicornfree.com/promotab.gif" alt="" />
-
-                <p>Yeah, our emails are sent using mailing list tools&#8230; but believe me, they&#8217;re not your typical blahhhh marketing newsletters. However. Google can&#8217;t always tell the difference. Welcome to 2016. :)</p>
             </div>
 
         </div>
