--- a/subscription-success.html
+++ b/subscription-success.html
@@ -78,7 +78,7 @@
 
                 <p>We wish we didn&#8217;t have to say this, since we go out of our way to NEVER send spam, and we&#8217;ll never sell your email address to someone else. But your spam filter might not know that, so let&#8217;s make sure you don&#8217;t miss a thing.</p>
 
-                <p><strong>Be sure to whitelist emails from:</strong> <a href="#">info@marcobehler.com</a></p>
+                <p><strong>Be sure to whitelist emails from:</strong> <a href="mailto:info@marcobehler.com">info@marcobehler.com</a></p>
 
                 <p>The simplest way to help make sure our emails don&#8217;t get accidentally sent to your spam filter is to add our email address above to the address book in whatever mail client you use.</p>
 
