--- a/subscription-success.html
+++ b/subscription-success.html
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12" style="line-height: 1.7em;">
-                <h1>Yay! Welcome to the club!</h1>
+                <h1 id="welcome">Yay! Welcome to the club!</h1>
 
                 <p>Go and check your inbox, we will send you instructions on how to watch our free Spring Boot videos.</p>
 
@@ -116,5 +116,28 @@
 <script src="js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="js/ie10-viewport-bug-workaround.js"></script>
+
+<script type="text/javascript">
+    function findGetParameter(parameterName) {
+        var result = null,
+                tmp = [];
+        location.search
+                .substr(1)
+                .split("&")
+                .forEach(function (item) {
+                    tmp = item.split("=");
+                    if (tmp[0] === parameterName) result = decodeURIComponent(tmp[1]);
+                });
+        return result;
+    }
+
+
+    var name = findGetParameter("name");
+    if (name != "null") {
+        document.getElementById("welcome").innerHTML = "Yay! Welcome to the club, " + name + " !";
+    }
+
+</script>
+
 </body>
 </html>
