--- a/subscription-success.html
+++ b/subscription-success.html
@@ -72,7 +72,7 @@
             <div class="col-sm-12" style="line-height: 1.7em;">
                 <h1 id="welcome">Yay! Welcome to the club!</h1>
 
-                <p>Go and check your inbox, we will send you instructions on how to watch our free Spring Boot videos.</p>
+                <p>Go and check your inbox, we will send you instructions on how to watch our free Spring Boot videos in a couple of seconds.</p>
 
                 <p><strong>Just one more thing…</strong></p>
 
